--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <option value="grayscale">Filter: Grayscale</option>
             <option value="sepia">Filter: Sepia</option>
             <option value="invert">Filter: Invert</option>
-            <option value="brighten">Filter: Brighten</option>
-            <option value="threshold">Filter: Threshold</option>
+            <!-- Brighten -->
+            <!-- Threshold -->
           </select>
           <select id="mask">
             <option value="none">Mask: None</option>
-            <option value="guy">Mask: Guy Fawkes</option>
-            <option value="batman">Mask: Batman</option>
+            <!-- Guy Fawkes -->
+            <!-- Batman -->
           </select>
         </div>
     </div>
@@ -34,7 +34,7 @@
     <script src="node_modules/tracking/build/data/face-min.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
-    <script type="text/javascript" src="js/masks.js"></script>
+    <!-- Masks -->
     <script type="text/javascript" src="js/publish.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
