remove mask menu from start altogether

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
             <!-- Brighten -->
             <!-- Threshold -->
           </select>
-          <select id="mask">
-            <option value="none">Mask: None</option>
-            <!-- Guy Fawkes -->
-            <!-- Batman -->
-          </select>
+          <!-- Masks -->
         </div>
     </div>
 
