--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <script type="text/javascript">
       var exports = {};
     </script>
-    <script src="node_modules/tracking/build/tracking-min.js"></script>
-    <script src="node_modules/tracking/build/data/face-min.js"></script>
+    <!-- Scripts -->
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
     <!-- Masks -->
