--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
             <option value="grayscale">Filter: Grayscale</option>
             <option value="sepia">Filter: Sepia</option>
             <option value="invert">Filter: Invert</option>
+            <option value="brighten">Filter: Brightening</option>
             <!-- Brighten -->
             <!-- Threshold -->
           </select>
           <!-- Masks -->
+          <select id="mask">
+            <option value="none">None</option>
+            <option value="guy">Robert Williams</option>
+            <option value="batman">Batman</option>
+          </select>
         </div>
     </div>
 
@@ -27,9 +33,11 @@
       var exports = {};
     </script>
     <!-- Scripts -->
+    <script type="text/javascript" src="node_modules/tracking/build/tracking-min.js"></script>
+    <script type="text/javascript" src="node_modules/tracking/build/data/face-min.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
-    <!-- Masks -->
+    <script type="text/javascript" src="js/masks.js"></script>
     <script type="text/javascript" src="js/publish.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
